--- a/index.html
+++ b/index.html
@@ -13,5 +13,14 @@
 			<div id="power-meter"></div>
 		</div>
 	</div>
+	<div id="watermark">
+		<a href="https://www.andrewt.net">Game by Andrew</a>
+	</div>
+	<div id="splash-screen">
+		<h1>Milkshake! Duck!</h1>
+		<p>Oh no! A fascist has come to your home town to spread hate! Use your mouse to throw milkshake on them!</p>
+		<p>Move the mouse vertically to control the angle of your throw, and horizontally to dodge the placards. Hold the mouse to set power, and release to throw.</p>
+		<p>Click to start.</p>
+	</div>
 </body>
 </html>
