credit on splash screen

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		<p>Oh no! A fascist has come to your home town to spread hate! Use your mouse to throw milkshake on them!</p>
 		<p>Move the mouse vertically to control the angle of your throw, and horizontally to dodge the placards. Hold the mouse to set power, and release to throw.</p>
 		<p>Click to start.</p>
+		<p><a href="https://www.andrewt.net">Game by Andrew</a></p>
 	</div>
 </body>
 </html>
