--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 	<title>Milkshake! Duck!</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script type="text/javascript" src="main.js"></script>
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:site" content="@andrew_taylor" />
+	<meta name="twitter:creator" content="@andrew_taylor" />
+	<meta property="og:url" content="http://github.andrewt.net/milkshake/" />
+	<meta property="og:title" content="Milkshake! Duck!" />
+	<meta property="og:description" content="Use your mouse to cover bad men in milkshake!" />
+	<meta property="og:image" content="http://github.andrewt.net/milkshake/img/preview.png" />
 </head>
 <body>
 	<div id="scene"></div>
